examples/conf/HTTPRoute_default_plugin-logs-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plugin-logs-test-route
  namespace: default
spec:
  parentRefs:
    - name: example-gateway
      namespace: edge
  hostnames:
    - "plugin-test.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: debug-access-log-test
      backendRefs:
        - name: test-http
          namespace: edge
          port: 30001
